# flask-ecom-api

./: .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.prod.yaml  pyproject.toml  setup.cfg  wsgi.py
flask_ecom_api/: __init__.py  app.py  config.py  errors.py  manage.py
migrations/versions/: 01f8cb176e2b_add_product_category_table.py  05307220afc6_add_relationship_between_order_and_.py  075d34b40a19_add_category_model.py  0dc1edb7a2c1_add_admin_user_models.py  1362da75cc5c_add_order_model.py  2175eaddb802_add_restaurant_courier_table.py  2aa03cf3b06c_make_restaurant_name_non_unique.py  358ccc7d1b46_add_relationship_between_restaurants_.py  35e79394cf1c_change_column_type_of_courier_id.py  4031575c263a_slug_product_model_not_null.py  47a9029b6a99_check_order_product_quantity_field_non_.py  52c5cd419332_add_product_model.py  59d18ec245f4_add_order_products_table.py  5e2c167c376a_check_product_ingredient_fields_non_.py  5fa1708fc0e6_make_product_fields_non_unique.py  62371d762299_check_cart_quantity_field_non_negative.py  6d1746022419_add_ingredient_model.py  6d99551dc1cd_add_reference_field_to_cart_model.py  7213ece244f7_add_sqlalchemy_utils_column_types_to_.py  79f757396235_remove_slug_field_to_product_model.py  7a3228322f8b_fix_customer_email_field.py  7ea223fbcdc3_add_courier_model.py  80af27ad948c_add_cart_model.py  82cd98a31152_check_order_product_cost_field_non_.py  85eff35c69b5_add_sqlalchemy_utils_column_types.py  8cb7b2ba1d54_add_last_migrate.py  964048ead47f_add_restaurant_product_table.py  999988857856_add_order_product_table.py  9cb36b52b9c5_add_product_image_model.py  a31c67668e0d_product_not_null_to_productimage.py  a75a12c4cd9a_add_customer_model.py  ab2eacaace39_add_product_ingredient_table.py  ac36a514f889_add_cart_product_model.py  b1dbb9a7328e_add_restaurant_model.py  (+6 more)
tests/: conftest.py  test_config.py
(+32 files in other folders)
