[tool.poetry]
name = "flask-ecom-api"
version = "0.1.0"
description = ""
authors = ["savilard <vitaliyantonoff@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"

SQLAlchemy = "1.3.24"
loguru = "^0.5.3"
webargs = "^7.0.1"
marshmallow = "^3.10.0"
Flask-Migrate = "^2.7.0"
psycopg2-binary = "^2.8.6"
Flask-Admin = "^1.5.7"
Jinja2 = "^2.11.3"
SQLAlchemy-Utils = "^0.36.8"
phonenumbers = "^8.12.20"
email-validator = "^1.1.2"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.2"
simplejson = "^3.17.2"
Flask-JWT-Extended = "^4.1.0"


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pre-commit = "^2.11.1"
mypy = "^0.812"

pytest = "^6.2.2"
pytest-pythonpath = "^0.7.3"
pytest-randomly = "^3.5.0"
pytest-cov = "^2.11.1"
pytest-deadfixtures = "^2.2.1"

black = "^20.8b1"
blacken-docs = "^1.10.0"
add-trailing-comma = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
